added local auth services with externals

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   },
   "peerDependencies": {
     "lucide-react": ">=0.542.0",
-    "react": ">=18"
+    "react": ">=18",
+    "react-dom": ">=18",
+    "react-router-dom": ">=6.0.0"
   }
 }
