--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
-    }
+    },
+    "./dist/local-auth-public.css": "./dist/local-auth-public.css"
   },
   "files": [
     "dist"
@@ -36,6 +37,8 @@
     "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.12",
     "lucide-react": "^0.542.0",
+    "tailwindcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vite-plugin-dts": "^4.5.4"
