--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "prepare": "npm run build",
+    "postinstall": "npm run build",
     "prepublishOnly": "npm run build && npm run verify",
     "build": "vite build",
     "verify": "npm pack --dry-run > npm-pack.txt",
